# dslcompile

./: .gitignore  ANF_CHEATSHEET.md  API_UNIFICATION_PLAN.md  BREAKTHROUGH_SUMMARY.md  CLAUDE.md  COMPILE_TIME_EGGLOG_MACRO_DESIGN.md  COMPILE_TIME_VS_FINAL_TAGLESS_ANALYSIS.md  CRANELIFT_INTEGRATION_SUMMARY.md  CURRENT_STATE.md  Cargo.toml  DEVELOPER_NOTES.md  DSL_System_Architecture.md  E_GRAPH_ANALYSIS_SUMMARY.md  FRUNK_ZERO_COST_EXPLANATION.md  HELPER_FOR_CLAUDE.md  LICENSE  Manifest.toml  OPERATION_STRUCTURE_DESIGN.md  PL_OPTIMIZATION_RECOMMENDATIONS.md  PROCEDURAL_MACRO_BREAKTHROUGH.md  Project.toml  README.md  RECOVERY_SUMMARY.md  REDUNDANCY_ANALYSIS.md  REDUNDANCY_ANALYSIS_SUMMARY.md  ROADMAP.md  SUMMATION_CLEANUP_PLAN.md  SUMMATION_INTEGRATION_PROTOTYPE.md  SUMMATION_MIGRATION_GUIDE.md  SUMMATION_UNIFICATION_PLAN.md  TRAIT_BASED_OPTIMIZATION_PATH.md  UNIFIED_API_DESIGN.md  VARIABLE_DEPENDENCY_PLAN.md  add_cse_placeholders.py  comparison_example.jl  cranelift_vs_rust_performance_analysis.md  debug_ast.rs  debug_ast_and_timing.rs  debug_codegen.rs  debug_core_rules.egg  (+42 more)
dslcompile/: API_UNIFICATION_STATUS.md  Cargo.toml  REFACTORING_SUMMARY.md  ROADMAP.md  SUMMATION_CONSOLIDATION_ANALYSIS.md  check_pow  check_pow.rs  test_power  test_power.rs  test_powf
dslcompile-macros/: Cargo.toml
dslcompile-macros/src/: lib.rs
dslcompile/benches/: context_comparison.rs  context_comparison_fixed.rs  cranelift_comparison.rs  cranelift_vs_rust.rs  expression_optimization.rs  final_performance_comparison.rs  frunk_performance.rs  frunk_quick_test.rs  heterogeneous_dispatch_benchmark.rs  heterogeneous_vs_cranelift.rs  llvm_vs_rust_benchmark.rs  macro_vs_heterogeneous.rs  memory_allocation.rs  realistic_workload.rs  simple_optimization.rs  vec_lookup_elimination_benchmark.rs  zero_overhead_results.rs  zero_overhead_test.rs
dslcompile/docs/: STACK_BASED_TRAVERSAL_SOLUTION.md  VISITOR_PATTERN_MIGRATION_ANALYSIS.md  VISITOR_PATTERN_SOLUTION.md
dslcompile/dslcompile/examples/: debug_cse_rules.rs
dslcompile/examples/: advanced_iid_normal_llvm_demo.rs  affine_overhead_analysis.rs  anf_cse_performance_test.rs  anf_demo.rs  anf_egglog_bridge_demo.rs  api_unification_demo.rs  arena_demo.rs  array_summation_demo.rs  asm_profile_target.rs  basic_usage.rs  bayesian_linear_regression.rs  benchmark_string_conversion.rs  clean_iterator_api_demo.rs  clean_summation_demo.rs  clean_summation_integration_demo.rs  closure_cse_demo.rs  code_size_comparison.rs  collection_codegen_demo.rs  compile_time_egglog_demo.rs  composable_functions_demo.rs  composition_api_demo.rs  comprehensive_iid_gaussian_demo.rs  cranelift_advanced_targets_demo.rs  cranelift_dynamic_context_demo.rs  cranelift_vs_rayon_parallelism.rs  custom_egraph_analysis.rs  data_driven_iid_demo.rs  data_summation_demo.rs  debug_ast_analysis.rs  debug_ast_and_timing.rs  debug_codegen.rs  debug_cse_rules.rs  debug_data_detection.rs  debug_egglog.rs  debug_egglog_expansion.rs  debug_failing_test.rs  debug_iid.rs  debug_normalization.rs  debug_rule_loading.rs  debug_scope_merging.rs  (+152 more)
dslcompile/examples_disabled/: benchmark_string_conversion.rs  clean_summation_integration_demo.rs  code_size_comparison.rs  composable_functions_demo.rs  composition_api_demo.rs  debug_rule_loading.rs  debug_sum_splitting.rs  debug_summation.rs  debug_test.rs  evaluation_bug_test.rs  lambda_variable_test.rs  lambdavar_unified_demo.rs  minimal_egglog_demo.rs  modern_composition_demo.rs  natural_function_call_demo.rs  pointwise_demonstration.rs  research_egglog_api.rs  scope_merging_commutativity_demo.rs  set_cost_multiplicative_demo.rs  simple_composition_demo.rs  simple_dynamic_cost_demo.rs  simple_dynamic_cost_working.rs  simple_dynamic_test.rs  simple_egglog_debug.rs  staged_egglog_demo.rs  static_context_iid_test.rs  static_linking_demo.rs  sum_splitting_test_demo.rs  summation_cost_analysis_demo.rs  test_sum_splitting_optimization.rs  test_sum_splitting_priority.rs  test_true_multisets.rs  true_static_linking_demo.rs  variable_vs_lambdavar_comparison.rs
dslcompile/src/: error.rs  interval_domain.rs  jit.rs  lib.rs  unified_context.rs  unified_variadic.rs  zero_overhead_core.rs  zero_overhead_storage.rs
dslcompile/src/ast/: arena.rs  arena_conversion.rs  ast_repr.rs  ast_repr.rs.backup  ast_repr.rs.step1  ast_repr.rs.step2  ast_repr.rs.step3  ast_utils.rs  ast_utils.rs.broken  evaluation.rs  mod.rs  multiplicity.rs  multiset.rs  normalization.rs  operators.rs  pretty.rs  stack_visitor.rs  visitor.rs
dslcompile/src/backends/: cranelift.rs  cranelift_v2.rs  llvm_jit.rs  mod.rs  rust_codegen.rs  static_compiler.rs
dslcompile/src/compile_time/: enhanced_scoped.rs  heterogeneous.rs  heterogeneous_v2.rs  heterogeneous_v3.rs  heterogeneous_v4.rs  (+7 more)
dslcompile/tests/: ast_property_tests.rs  ast_utils_property_tests.rs  automatic_scope_merging.rs  collection_property_tests.proptest-regressions  collection_property_tests.rs  comprehensive_dataarray_equality_test.rs  conversion_bug_test.rs  debug_ast_creation.rs  debug_ast_equality_detailed.rs  debug_ast_structure.rs  debug_ast_structure_test.rs  debug_conversion_test.rs  debug_data_storage.rs  debug_lambda_variable_issue.rs  debug_macro.rs  debug_multiset_equality.rs  debug_normalization_sum_corruption.rs  debug_simple_repro.rs  function_composition_solution.rs  independent_function_composition.rs  interval_domain_property_tests.proptest-regressions  interval_domain_property_tests.rs  lambda_conversion_bug_test.rs  llvm_jit_integration_tests.rs  macro_integration_proptests.rs  measures_demo_bug_tests.rs  normalization_tests.rs  procedural_macro_proptests.rs  proptest_robustness.proptest-regressions  proptest_robustness.rs  readme_examples.rs  round_trip_test.rs  rust_codegen_property_tests.proptest-regressions  rust_codegen_property_tests.rs  scope_merging_property_tests.proptest-regressions  scope_merging_property_tests.rs  shared_variable_composition.rs  simple_collection_tests.rs  simple_egglog_test.rs  summation_v2_proptests.proptest-regressions  (+14 more)
mathcompile-macros/: Cargo.toml
mathcompile-macros/src/: lib.rs
(+360 files in other folders)
