[package]
name = "mathcompile"
version = "0.2.0"
edition = "2024"
description = "High-performance symbolic mathematics with final tagless design, egglog optimization, and Rust hot-loading compilation"
license = "AGPL-3.0-or-later"
repository = "https://github.com/chad-measures/measures"
keywords = ["symbolic", "mathematics", "rust-codegen", "final-tagless", "optimization"]
categories = ["mathematics", "science", "compilers"]

[dependencies]
# Core numeric traits for generic operations
num-traits = "0.2"

# Procedural macros for compile-time optimization
mathcompile-macros = { path = "mathcompile-macros" }

# Error handling
thiserror = "2.0.12"

# JIT compilation with Cranelift (optional)
cranelift = { version = "0.120.0", optional = true }
cranelift-jit = { version = "0.120.0", optional = true }
cranelift-module = { version = "0.120.0", optional = true }
cranelift-codegen = { version = "0.120.0", optional = true }
cranelift-frontend = { version = "0.120.0", optional = true }
target-lexicon = { version = "0.13.2", optional = true }

# Serialization support
serde = { version = "1.0", features = ["derive"], optional = true }

# Symbolic optimization with egglog
egglog = { version = "0.4", optional = true }

# Dynamic library loading for Rust codegen backend
dlopen2 = "0.8"

# For performance comparisons
ad_trait = { version = "0.1", optional = true }
ordered-float = "5.0.0"


[features]
default = ["optimization"]
optimization = ["dep:egglog"]
cranelift = ["dep:cranelift", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-codegen", "dep:cranelift-frontend", "dep:target-lexicon"]
ad_trait = ["dep:ad_trait"]
all = ["optimization", "cranelift", "ad_trait"]

# Legacy feature aliases for backward compatibility
symbolic = ["optimization"]
jit = ["cranelift"]

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
divan = "0.1"
proptest = "1.5"

[[bench]]
name = "expression_optimization"
harness = false

[[bench]]
name = "simple_optimization"
harness = false

[[bench]]
name = "cranelift_vs_rust"
harness = false

# Test configurations for procedural macro proptests
[[test]]
name = "procedural_macro_proptests"
path = "tests/procedural_macro_proptests.rs"

[[test]]
name = "macro_integration_proptests"
path = "tests/macro_integration_proptests.rs"

 