[workspace]
resolver = "2"
members = [
    "dslcompile",
    "dslcompile-macros"
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/cscherrer/dslcompile"

[workspace.dependencies]
# Core numeric traits for generic operations
num-traits = "0.2"

# Error handling
thiserror = "2.0.12"

# JIT compilation with Cranelift
cranelift = "0.120.0"
cranelift-jit = "0.120.0"
cranelift-module = "0.120.0"
cranelift-codegen = "0.120.0"
cranelift-frontend = "0.120.0"
target-lexicon = "0.13.2"

# Serialization support
serde = { version = "1.0", features = ["derive"] }

# Symbolic optimization with egglog
egglog = "0.4"

# Dynamic library loading for Rust codegen backend
dlopen2 = "0.8"

# For performance comparisons
ad_trait = "0.1"
ordered-float = "5.0.0"

# Procedural macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# Dev dependencies
criterion = { version = "0.6.0", features = ["html_reports"] }
divan = "0.1"
proptest = "1.5"
trybuild = "1.0" 