[workspace]
resolver = "2"
members = [
    "dslcompile",
    "dslcompile-macros"
]

[workspace.lints.clippy]
pedantic = "warn"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/cscherrer/dslcompile"

[workspace.dependencies]
# Core numeric traits for generic operations
num-traits = "0.2"

# Error handling
thiserror = "2.0.12"

# Command line interface
clap = { version = "4.5.40", features = ["derive"] }

# Serialization support
serde = { version = "1.0", features = ["derive"] }

# Dynamic library loading for Rust codegen backend
dlopen2 = "0.8"

# For performance comparisons
ad_trait = "0.1"
ordered-float = "5.0.0"

# Procedural macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# Dev dependencies
criterion = { version = "0.6.0", features = ["html_reports"] }
divan = "0.1"
proptest = "1.7"
trybuild = "1.0"

# HList support for unified variadic functions
frunk = "0.4"

# Random number generation
rand = "0.9.1"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
