[package]
name = "dslcompile-macros"
version.workspace = true
edition.workspace = true
description = "Procedural macros for compile-time mathematical optimization"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true


[features]
default = []

[dev-dependencies]
trybuild.workspace = true
