[package]
name = "dslcompile"
version.workspace = true
edition.workspace = true
description = "High-performance symbolic mathematics with final tagless design, egglog optimization, and Rust hot-loading compilation"
license.workspace = true
repository.workspace = true
keywords = ["symbolic", "mathematics", "rust-codegen", "final-tagless", "optimization"]
categories = ["mathematics", "science", "compilers"]

[dependencies]
# Core numeric traits for generic operations
num-traits = "0.2"

# Procedural macros for compile-time optimization
dslcompile-macros = { version = "0.0.1", path = "../dslcompile-macros" }

# Error handling
thiserror = "2.0.12"



# Serialization support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Symbolic optimization with egglog
egglog = { workspace = true, optional = true }

# Dynamic library loading for Rust codegen backend
dlopen2.workspace = true

# For performance comparisons
ad_trait = { workspace = true, optional = true }
ordered-float.workspace = true

# HList support for unified variadic functions
frunk = "0.4"

clap.workspace = true

rand.workspace = true

[features]
default = ["optimization"]
optimization = ["dep:egglog"]
ad_trait = ["dep:ad_trait"]
all = ["optimization", "ad_trait"]

# Legacy feature aliases for backward compatibility
symbolic = ["optimization"]

[dev-dependencies]
criterion.workspace = true
divan.workspace = true
proptest.workspace = true

[[bench]]
name = "expression_optimization"
harness = false

[[bench]]
name = "simple_optimization"
harness = false







[[example]]
name = "enhanced_scoped_demo"
path = "examples/enhanced_scoped_demo.rs" 
