[package]
name = "dslcompile"
version.workspace = true
edition.workspace = true
description = "High-performance symbolic mathematics with final tagless design, egg optimization, and Rust hot-loading compilation"
license.workspace = true
repository.workspace = true
keywords = ["symbolic", "mathematics", "rust-codegen", "final-tagless", "optimization"]
categories = ["mathematics", "science", "compilers"]

[lints]
workspace = true

[dependencies]
# Core numeric traits for generic operations
num-traits = "0.2"

# Procedural macros for compile-time optimization
dslcompile-macros = { version = "0.0.1", path = "../dslcompile-macros" }

# Error handling
thiserror = "2.0.12"



# Serialization support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# E-graph optimization with egg
egg = { version = "0.10.0", optional = true }

# Dynamic library loading for Rust codegen backend
dlopen2.workspace = true

# For performance comparisons
ad_trait = { workspace = true, optional = true }
ordered-float.workspace = true

# HList support for unified variadic functions
frunk = "0.4"

clap.workspace = true

rand.workspace = true


[features]
default = ["optimization"]
optimization = ["dep:egg"]
ad_trait = ["dep:ad_trait"]
all = ["optimization", "ad_trait"]

# Legacy feature aliases for backward compatibility
symbolic = ["optimization"]
egg_optimization = ["optimization"]

[dev-dependencies]
criterion.workspace = true
divan.workspace = true
proptest.workspace = true

[[bench]]
name = "expression_optimization"
harness = false

[[bench]]
name = "simple_optimization"
harness = false







[[example]]
name = "multiset_demonstration"
path = "examples/multiset_demonstration.rs"

[[example]]
name = "enhanced_scoped_demo"
path = "examples/enhanced_scoped_demo.rs"


 
