[package]
name = "mathcompile-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for compile-time mathematical optimization"
license = "AGPL-3.0-or-later"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
# Add egglog for real compile-time optimization
egglog = { version = "0.4", optional = true }

[features]
default = ["optimization"]
optimization = ["dep:egglog"]

[dev-dependencies]
trybuild = "1.0"
